--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,15 @@
 	       <artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+	        <groupId>mysql</groupId>
+	        <artifactId>mysql-connector-java</artifactId>
+	    </dependency>
 		<!-- junit -->
 		<!-- <dependency>
 			<groupId> org.junit.jupiter</groupId>
